# Haskell-Crunch-Library

./: crunch.cabal
src/: Crunch.hs
test/: Main.hs
