Name: crunch
Version: 1.0.0
Cabal-Version: >=1.10
Build-Type: Simple
License: BSD3
License-File: LICENSE
Copyright: 2015 Gabriel Gonzalez
Author: Gabriel Gonzalez
Maintainer: Gabriel439@gmail.com
Bug-Reports: https://github.com/Gabriel439/Haskell-Crunch-Library/issues
Synopsis: Really fast serialization to and from handles
Description: @crunch@ is a serialization library specialized to reading from and
    writing to handles
Category: System
Source-Repository head
    Type: git
    Location: https://github.com/Gabriel439/Haskell-Crunch-Library

Library
    HS-Source-Dirs: src
    Build-Depends:
        base         >= 4.6      && < 5  ,
        transformers >= 0.2.0.0  && < 0.5,
        vector       >= 0.10.0.1 && < 0.11
    Exposed-Modules: Crunch
    GHC-Options: -O2 -Wall
    Default-Language: Haskell2010

-- test-suite tests
--     Type: exitcode-stdio-1.0
--     HS-Source-Dirs: test
--     Main-Is: Main.hs
--     GHC-Options: -O2 -Wall
--     Default-Language: Haskell2010
--     Build-Depends:
--         base         >= 4      && < 5  ,
--         doctest      >= 0.9.12 && < 0.10
